# v1-service-commit

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: entity.py  main.py
